<resources>
    <string name="app_name">MVVM Task</string>
    <string name="error_no_internet_connection">No Internet Connection</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="welcome_message">Welcome To MVVM Task</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_header">Sign up!</string>
    <string name="sign_up_subHeader">create an account to get start</string>
    <string name="full_name">Full name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="empty_email_validation">Email is required</string>
    <string name="empty_name_validation">Name is required</string>
    <string name="not_valid_email_msg">Invalid Email address, ex: abc@example.com</string>
    <string name="empty_password_validation">Password is required</string>
    <string name="password_validation">\"Password can\'t be less than 6 digit\"</string>
    <string name="select_image_validation">Please select image first</string>
    <string name="person_name">Ahmed Agrama</string>
    <string name="person_job">Designer,UI/UX</string>
    <string name="bio">Bio</string>
    <string name="bio_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit,cididunt ut labore et dolore magna aliqua.</string>
    <string name="select_your_message">Select Your Message</string>
    <string name="message_me">Message Me</string>
</resources>
